--- a/Proyecto/src/Interfaz/Reporte1.form
+++ b/Proyecto/src/Interfaz/Reporte1.form
@@ -23,13 +23,81 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="943" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="148" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="bntReporte3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                      <Component id="bntReporte2" min="-2" max="-2" attributes="0"/>
+                      <Component id="bntReporte" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="bntReporte5" min="-2" max="-2" attributes="0"/>
+                  <Component id="bntReporte4" min="-2" max="-2" attributes="0"/>
+                  <Component id="bntReporte6" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="199" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="502" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="bntReporte" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="bntReporte4" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="bntReporte2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="bntReporte5" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="bntReporte3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="bntReporte6" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="100" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JButton" name="bntReporte">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporteActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntReporte2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 2"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntReporte3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 3"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntReporte4">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 4"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntReporte5">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 5"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntReporte6">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 6"/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
