Reporte 2 y creacion de una nueva clase reportes

--- a/Proyecto/src/Interfaz/PrincipalReportes.form
+++ b/Proyecto/src/Interfaz/PrincipalReportes.form
@@ -77,6 +77,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reporte 2"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporte2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bntReporte3">
       <Properties>
@@ -105,6 +108,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reporte 1"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporte1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bntRegresar">
       <Properties>
