--- a/Proyecto/src/Interfaz/PrincipalReportes.form
+++ b/Proyecto/src/Interfaz/PrincipalReportes.form
@@ -93,6 +93,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reporte 4"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporte4ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bntReporte5">
       <Properties>
