--- a/Proyecto/src/Interfaz/Mantenimiento.form
+++ b/Proyecto/src/Interfaz/Mantenimiento.form
@@ -19,7 +19,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Catalogo de Peliculas"/>
+                <Property name="text" type="java.lang.String" value="Catalogo  Peliculas"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
