--- a/Proyecto/src/Interfaz/catalogoMusica.form
+++ b/Proyecto/src/Interfaz/catalogoMusica.form
@@ -29,7 +29,7 @@
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="267" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="bntAgregar" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
@@ -194,7 +194,7 @@
             <StringItem index="0" value="Bachata"/>
             <StringItem index="1" value="Electronica"/>
             <StringItem index="2" value="Reggae"/>
-            <StringItem index="3" value="Reggaeton"/>
+            <StringItem index="3" value="Raggaeton"/>
             <StringItem index="4" value="Pop"/>
           </StringArray>
         </Property>
